/iTrade/ChangeLog
===============================================================================

On the road for v0.4.6 (Nausicaa2)

===============================================================================

2007-04-05  Gilles Dumortier <dgil at ieee.org>
	* Add Currencies : Canadian Dollar and Switzerland Francs
	* Add Toronto and Switzerland exchanges (TSE, TSX, SWISS EXCHANGE)

2007-02-23  Michel Legrand <m_leg at users.sourceforge.net>
	* More logo for EURONEXT PARIS quotes - COOL !

2007-02-2x  Gilles Dumortier <dgil at ieee.org>
	* Fix a regression introduced by "Dirty flag : suppress it (SF bug
	  1665541)" -> main window size/position was not saved correcly at
	  closing time

2007-02-21  Gilles Dumortier <dgil at ieee.org>
	* Dirty flag : suppress it (SF bug 1665541)
	* Stops view : Add a quote in other main market (SF bug 1664690)
	* Sell/Buy from the matrix screen (SF bug 1454553)
	* Start working on brokers / fees back-end
	* remove itrade_wxmatrix module (replaced by wxpanes/wxbook)
	* Quote View : Icon placement + Info auto-placement (SF bug 1616047)
	* Live View : Decision Information (SF bug 1625267)

2007-02-20  Gilles Dumortier <dgil at ieee.org>
	* Start implement Live View : Decision Information (SF bug 1625267)
	* Matrix View : display a mark for traded quotes (SF bug 1660985)
	* Term period and Risk level per line : properties of the portfolio
	* View Stops : do not display portfolio information for a quote not in
	  the portfolio !
	* View Stops : be able to add a quote not in the matrix
	* Barchart plugin : a request per letter - otherwise, some symbols are
	  missing (like CSCO)
	* Check software release for upgrading (SF bug 1647466)
	* Euronext plugin : URL to import historical data was changed
	* Euronext plugin : URL to get IdInstrument was changed
	* Move symbols lists to specific /symbols folder (on going work to have
	  symbols lists storage per market)
	* Euronext plugin : update the URL to download symbols lists