@@ -1,0 +1,8 @@
+/iTrade/images/README
+===============================================================================
+
+Download the latest images package from http://itrade.sourceforge.net
+
+File name : itrade_images_<date>.tar.gz
+
+===============================================================================
